syntax = "proto3";
package ssc.chainlet;

import "gogoproto/gogo.proto";
import "ssc/chainlet/chainlet_stack_params.proto";

option go_package = "github.com/sagaxyz/ssc/x/chainlet/types";

message ChainletStack {
  string creator = 1;
  string displayName = 2;
  string description = 3;
  repeated ChainletStackParams versions = 4 [ (gogoproto.nullable) = false ];
  ChainletStackFees fees = 5 [ (gogoproto.nullable) = false ];
}

message ChainletStackFees {
  string epochFee = 1;
  string epochLength = 2;
  string setupFee = 3;
}
